@@ -228,7 +228,7 @@ def process_index_entry(entry, targetid):
     return indexentries
 
 
-def inline_all_toctrees(builder, docnameset, docname, tree, colorfunc):
+def inline_all_toctrees(builder, docnameset, docname, tree, colorfunc, traversed):
     """Inline all toctrees in the *tree*.
 
     Record all docnames in *docnameset*, and output docnames with *colorfunc*.
@@ -238,23 +238,25 @@ def inline_all_toctrees(builder, docnameset, docname, tree, colorfunc):
         newnodes = []
         includefiles = map(text_type, toctreenode['includefiles'])
         for includefile in includefiles:
-            try:
-                builder.info(colorfunc(includefile) + " ", nonl=1)
-                subtree = inline_all_toctrees(builder, docnameset, includefile,
-                                              builder.env.get_doctree(includefile),
-                                              colorfunc)
-                docnameset.add(includefile)
-            except Exception:
-                builder.warn('toctree contains ref to nonexisting '
-                             'file %r' % includefile,
-                             builder.env.doc2path(docname))
-            else:
-                sof = addnodes.start_of_file(docname=includefile)
-                sof.children = subtree.children
-                for sectionnode in sof.traverse(nodes.section):
-                    if 'docname' not in sectionnode:
-                        sectionnode['docname'] = includefile
-                newnodes.append(sof)
+            if includefile not in traversed:
+                try:
+                    traversed.append(includefile)
+                    builder.info(colorfunc(includefile) + " ", nonl=1)
+                    subtree = inline_all_toctrees(builder, docnameset, includefile,
+                                                  builder.env.get_doctree(includefile),
+                                                  colorfunc, traversed)
+                    docnameset.add(includefile)
+                except Exception:
+                    builder.warn('toctree contains ref to nonexisting '
+                                 'file %r' % includefile,
+                                 builder.env.doc2path(docname))
+                else:
+                    sof = addnodes.start_of_file(docname=includefile)
+                    sof.children = subtree.children
+                    for sectionnode in sof.traverse(nodes.section):
+                        if 'docname' not in sectionnode:
+                            sectionnode['docname'] = includefile
+                    newnodes.append(sof)
         toctreenode.parent.replace(toctreenode, newnodes)
     return tree
 
