@@ -49,6 +49,7 @@ Bugs fixed
 * #1798: Fix building LaTeX with references in titles.
 * #1725: On py2 environment, doctest with using non-ASCII characters causes
   ``'ascii' codec can't decode byte`` exception.
+* #1540: Fix RuntimeError with circular referenced toctree
 
 
 Release 1.3.1 (released Mar 17, 2015)
